enhc open hide app bar and show on tap

--- a/folioreader/build.gradle
+++ b/folioreader/build.gradle
@@ -118,5 +118,9 @@ dependencies {
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle"
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 apply from: '../folioreader/bintray/bintrayv1.gradle'
