--- a/folioreader/build.gradle
+++ b/folioreader/build.gradle
@@ -108,10 +108,11 @@ dependencies {
     api("com.github.codetoart:r2-shared-kotlin:$versions.r2SharedKotlin") {
         changing = true
     }
-    api("com.github.codetoart:r2-streamer-kotlin:$versions.r2StreamerKotlin") {
-        exclude group: "org.slf4j", module: "slf4j-api"
-        changing = true
-    }
+//    api("com.github.codetoart:r2-streamer-kotlin:$versions.r2StreamerKotlin") {
+//        exclude group: "org.slf4j", module: "slf4j-api"
+//        changing = true
+//    }
+    implementation 'com.github.codetoart:r2-streamer-kotlin:1.0.4-2'
 
     // Only ReflectionUtils in Spring framework is used
     implementation 'org.springframework:spring-core:4.3.19.RELEASE'
